# sensors_ctrl_firmware

.github/workflows/: main.yml
src/: CMakeLists.txt  ca.key  ca.pem  client.crt  client.key  main.c
src/Moto_Ctrl_V5_esp32/lib/: _params.h  config.h  connect_to_wifi.h  dependencies.h  http_event_handler.h  moto_functions.h  ota.h  supabase_login.h  superbase_functions.h
src/Moto_Ctrl_V5_esp32/source/: connect_to_wifi.c  http_event_handler.c  moto_functions.c  ota.c  supabase_login.c  superbase_functions.c
